added some experimental jvm startup properties which helped the metager peer to get more stable.
git-svn-id: https://svn.berlios.de/svnroot/repos/yacy/trunk@4931 6c8d7289-2bf4-0310-a012-ef5d649a1542