@@ -77,7 +77,10 @@ done
 #echo $options;exit 0 #DEBUG for getopts
 
 #get javastart args
-JAVA_ARGS=""
+#JAVA_ARGS="";
+JAVA_ARGS="-server -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode -XX:+UseAdaptiveSizePolicy -XX:+UseLargePages";
+#JAVA_ARGS="-verbose:gc -XX:+PrintGCTimeStamps -XX:+PrintGCDetails $JAVA_ARGS";
+    
 if [ ! -f $CONFIGFILE -a -f DATA/SETTINGS/httpProxy.conf ]
 then
 	# old config if new does not exist
